erDiagram
    %% Relationships
    USER ||--o{ BILL : "creates"
    USER ||--o{ REQUEST_FUND : "submits"
    USER ||--o{ REPORT : "generates"
    USER ||--o{ VENDOR : "registers"
    USER ||--o{ BILL : "reviews"
    USER ||--o{ REQUEST_FUND : "reviews"
    VENDOR ||--o{ BILL : "provides"
    
    %% Tables
    USER {
        uuid id PK
        string name
        string email UK "Unique index"
        string password "Hashed"
        enum role "ADMIN, FINANCE_OFFICER"
        timestamp created_at
        timestamp updated_at
    }

    VENDOR {
        uuid id PK
        string name
        string contact_email
        string phone_number
        string tax_id
        string address
        uuid created_by_id FK "Refers to User.id"
        timestamp created_at
        timestamp updated_at
    }
    
    BILL {
        uuid id PK
        uuid vendor_id FK "Refers to Vendor.id"
        uuid created_by_id FK "Refers to User.id"
        string title
        decimal amount
        datetime date
        string image_path
        string description
        enum status "PENDING, APPROVED, REJECTED"
        uuid reviewed_by_id FK "Refers to User.id"
        string review_comments
        timestamp created_at
        timestamp updated_at
    }

    REQUEST_FUND {
        uuid id PK
        uuid created_by_id FK "Refers to User.id"
        string title
        string description
        decimal amount_of_fund
        enum urgency_level "LOW, MEDIUM, HIGH, CRITICAL"
        datetime date
        string image_path
        enum status "PENDING, APPROVED, REJECTED"
        uuid reviewed_by_id FK "Refers to User.id"
        string review_comments
        timestamp created_at
        timestamp updated_at
    }

    REPORT {
        uuid id PK
        uuid created_by_id FK "Refers to User.id"
        datetime date
        string title
        string description
        enum type_of_report "EMAIL, IN_APP"
        timestamp created_at
        timestamp updated_at
    }
